__quotes_driver_vihecle__